===================================
gnome-commander 1.6.0
---------------

Bug fixes:
 * ... 
New features:
* Always reopen the tab which was previously closed in the options dialog
* New or updated translations: 
     ...
* New key bindings:
     ...            ...

===================================
gnome-commander 1.4.2
---------------

Bug fixes:
 * Fixed problem bgo#367949 (Corrected async_xfer_callback-results for mooving folders)
 * Fixed problem bgo#598161 (Selecting text in internal viewer on lines with TAB characters)
New features:
* New or updated translations: 
     ...
* New key bindings:
     ...            ...


===================================
gnome-commander 1.4.1
---------------

Bug fixes:
 * Fixed problem bgo#641842 (use poppler-glib instead of poppler internal API)
 * Fixed problem bgo#726682 (Fix for undefined reference to vtable)
 * Support for utf8 encoded creation and modification dates in document metadata
 * Moved Search, Quick Search and Enable Filter from Edit to File menu
New or updated translations: 
    cs (Marek Černocký)
    es (Daniel Mustieles)
    fr (Alexandre Franke)
    id (Andika Triwidada)
    pt_BR (Rafael Ferreira)
    sl (Matej Urbančič)
New or updated docs:
    cs (Marek Černocký)
    es (Daniel Mustieles)

===================================
gnome-commander 1.4.0
---------------

Bug fixes:
 * Fixed problem bgo#377463 (mkdir dialog loses focus)
 * Fixed problem bgo#492479 (file replace prompt must show date and size of files)
 * Fixed problem bgo#617140 (GNOME Goal: Use accessor functions instead direct access)
 * Fixed problems bgo#632064, bgo#632208, bgo#633107, bgo#633167, bgo#633331, bgo#634972, bgo#637873, bgo#638059 (bugs in gnome-commander-help.master.po)
 * Fixed problem bgo#660043 (shortcut ALT+DOWN not documented)
 * Fixed problem bgo#660268 (remember directory history between sessions)
 * Fixed problem bgo#667080 (delete confirmation defaults to YES/OK)