@@ -41,6 +41,9 @@
                             <para>Always reopen the tab which was previously closed in the options dialog</para>
                         </listitem>
                         <listitem>
+                            <para>Samba support is now optionally available via configure option</para>
+                        </listitem>
+                        <listitem>
                             <para>New or updated docs: ??</para>
                         </listitem>
                         <listitem>
