@@ -102,10 +102,12 @@ inline GnomeCmdCon *get_home_con ()
     return gnome_cmd_con_list_get()->get_home();
 }
 
+#ifdef HAVE_SAMBA
 inline GnomeCmdCon *get_smb_con ()
 {
     return gnome_cmd_con_list_get()->get_smb();
 }
+#endif
 
 inline GList *get_remote_cons ()
 {
