@@ -48,7 +48,9 @@ enum ConnectionMethodID        // Keep this order in sync with strings in gnome-
     CON_SFTP = CON_SSH,
     CON_FTP,
     CON_ANON_FTP,
+#ifdef HAVE_SAMBA
     CON_SMB,
+#endif
     CON_DAV,
     CON_DAVS,
     CON_URI,
@@ -397,7 +399,9 @@ inline ConnectionMethodID gnome_cmd_con_get_scheme (GnomeVFSURI *uri)
            g_str_equal (scheme, "sftp") ? CON_SSH :
            g_str_equal (scheme, "dav")  ? CON_DAV :
            g_str_equal (scheme, "davs") ? CON_DAVS :
+#ifdef HAVE_SAMBA
            g_str_equal (scheme, "smb")  ? CON_SMB :
+#endif
                                           CON_URI;
 }
 
@@ -429,6 +433,7 @@ inline std::string &gnome_cmd_con_make_ftp_uri (std::string &s, gboolean use_aut
     return __gnome_cmd_con_make_uri (s, "ftp://", use_auth, server, port, folder, user, password);
 }
 
+#ifdef HAVE_SAMBA
 inline std::string &gnome_cmd_con_make_smb_uri (std::string &s, gboolean use_auth, std::string &server, std::string &share, std::string &folder, std::string &domain, std::string &user, std::string &password)
 {
     share = '/' + share;
@@ -460,6 +465,7 @@ inline std::string &gnome_cmd_con_make_smb_uri (std::string &s, gboolean use_aut
 
     return s;
 }
+#endif
 
 inline std::string &gnome_cmd_con_make_dav_uri (std::string &s, gboolean use_auth, std::string &server, std::string &port, std::string &folder, std::string &user, std::string &password)
 {
@@ -480,7 +486,9 @@ inline std::string &gnome_cmd_con_make_uri (std::string &s, ConnectionMethodID m
 
         case CON_SSH:       return gnome_cmd_con_make_ssh_uri (s, use_auth, server, port, folder, user, password);
 
+#ifdef HAVE_SAMBA
         case CON_SMB:       return gnome_cmd_con_make_smb_uri (s, use_auth, server, share, folder, domain, user, password);
+#endif
 
         case CON_DAV:       return gnome_cmd_con_make_dav_uri (s, use_auth, server, port, folder, user, password);
 
