@@ -910,7 +910,7 @@ inline void GnomeCmdData::load_local_bookmarks()
         gnome_cmd_con_add_bookmark (con, (gchar *) g_list_nth_data (names, i), (gchar *) g_list_nth_data (paths, i));
 }
 
-
+#ifdef HAVE_SAMBA
 inline void GnomeCmdData::load_smb_bookmarks()
 {
     gint size = gnome_cmd_data_get_int ("/smb_bookmarks/count", 0);
@@ -922,7 +922,7 @@ inline void GnomeCmdData::load_smb_bookmarks()
     for (gint i=0; i<size; i++)
         gnome_cmd_con_add_bookmark (con, (gchar *) g_list_nth_data (names, i), (gchar *) g_list_nth_data (paths, i));
 }
-
+#endif
 
 inline void GnomeCmdData::load_auto_load_plugins()
 {
@@ -1515,7 +1515,9 @@ void GnomeCmdData::load_more()
     if (!XML_cfg_has_bookmarks)
     {
         load_local_bookmarks();
+#ifdef HAVE_SAMBA
         load_smb_bookmarks();
+#endif
     }
 }
 
@@ -1714,8 +1716,9 @@ void GnomeCmdData::save()
         xml << XML::tag("Bookmarks");
 
         write (xml, priv->con_list->get_home(), "Home");
+#ifdef HAVE_SAMBA
         write (xml, priv->con_list->get_smb(), "SMB");
-
+#endif
         for (GList *i=gnome_cmd_con_list_get_all_remote (gnome_cmd_data.priv->con_list); i; i=i->next)
         {
             GnomeCmdCon *con = GNOME_CMD_CON (i->data);
