@@ -24,7 +24,9 @@
 #include "gnome-cmd-includes.h"
 #include "gnome-cmd-file-selector.h"
 #include "gnome-cmd-con-list.h"
+#ifdef HAVE_SAMBA
 #include "gnome-cmd-con-smb.h"
+#endif
 #include "gnome-cmd-combo.h"
 #include "gnome-cmd-data.h"
 #include "gnome-cmd-cmdline.h"
@@ -376,8 +378,12 @@ static void create_con_buttons (GnomeCmdFileSelector *fs)
     {
         GnomeCmdCon *con = GNOME_CMD_CON (l->data);
 
+#ifdef HAVE_SAMBA
         if (!gnome_cmd_con_is_open (con) && !GNOME_CMD_IS_CON_DEVICE (con) &&
             !GNOME_CMD_IS_CON_SMB (con))  continue;
+#else
+        if (!gnome_cmd_con_is_open (con) && !GNOME_CMD_IS_CON_DEVICE (con))  continue;
+#endif
 
         GnomeCmdPixmap *pm = gnome_cmd_con_get_go_pixmap (con);
 
@@ -988,8 +994,12 @@ void GnomeCmdFileSelector::update_connections()
         gchar *text[3];
         GnomeCmdCon *con = (GnomeCmdCon *) l->data;
 
+#ifdef HAVE_SAMBA
         if (!gnome_cmd_con_is_open (con) && !GNOME_CMD_IS_CON_DEVICE (con)
             && !GNOME_CMD_IS_CON_SMB (con))  continue;
+#else
+        if (!gnome_cmd_con_is_open (con) && !GNOME_CMD_IS_CON_DEVICE (con))  continue;
+#endif
 
         if (con == get_connection())
             found_my_con = TRUE;
